<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:text="@string/welcomeTextView"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/instructionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:text="@string/instructionTextView"
            android:textSize="20sp" />

        <Button
            android:id="@+id/rockButon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rockButton"
            android:textSize="24sp" />

        <Button
            android:id="@+id/paperButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paperButton"
            android:textSize="24sp" />

        <Button
            android:id="@+id/scissorsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scissorsButton"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/scoreboardTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:text="@string/scoreboardTextView"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/playerWeaponTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:text="@string/playerWeaponTextView"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/computerWeaponTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:text="@string/computerWeaponTextView"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/winnerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:text="@string/winnerTextView"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>